# OCR

./: CMakeLists.txt  Makefile  README.md  a.out  gtk.c  interface.c  main.c  ocr
C_Test/: Makefile  main.c  ocr  save.txt  test.c  test.h
Files/: Binary.c  Binary.h  Segmentation.c  Segmentation.h  Traitement.c  Traitement.h  Utility.c  Utility.h  adjustement.c  adjustement.h
interface/: interface.c  interface.h
